add api for nft and wallet
